# openGL-Learnings

./: .gitignore  CMakeLists.txt  GameBuid.sh  README.md  build.sh
.cache/clangd/index/: 3DSConverter.cpp.113DF6E208AF3CCF.idx  3DSExporter.cpp.F1B736B392AB07F5.idx  3DSExporter.h.BCFE58D637E4C51D.idx  3DSHelper.h.E9B8437E40268197.idx  3DSLoader.cpp.A3D2990EA8EF226A.idx  3DSLoader.h.8C259CF74881CC29.idx  3MFTypes.h.B070491C673C7E43.idx  3MFXmlTags.h.004391CE9C7F5885.idx  ACLoader.cpp.44E40E5436B6A9A4.idx  ACLoader.h.526881436E777062.idx  AMFImporter.cpp.C0903606A7238C94.idx  AMFImporter.hpp.7424213955ECB0A2.idx  AMFImporter_Geometry.cpp.9375FF994D2C8FF6.idx  AMFImporter_Material.cpp.D79409518B2A3DF7.idx  AMFImporter_Node.hpp.C3456EDFB809718D.idx  AMFImporter_Postprocess.cpp.F1D674FF0EC0E00E.idx  ASELoader.cpp.31E6A12492B2FA92.idx  ASELoader.h.A95324E58767E3C0.idx  ASEParser.cpp.D59D1701A8D14A1E.idx  ASEParser.h.F9DAD08FB5F416AD.idx  AbstractImportExportBase.cpp.7876B20F3ACB68A7.idx  AbstractImportExportBase.h.874D11076A1B4EC8.idx  ArmaturePopulate.cpp.636BB54B27EF2850.idx  ArmaturePopulate.h.C93F064C979761D3.idx  AssbinExporter.cpp.3AF3ACBEA44C02C3.idx  AssbinFileWriter.cpp.8E252A30F451A46D.idx  AssbinFileWriter.h.8C9C2580F73E7D1B.idx  AssbinLoader.cpp.A56BD3B4200FD283.idx  AssbinLoader.h.4F9CA1B866F7DDBA.idx  AssertHandler.cpp.9ACF209066B1C71C.idx  AssertHandler.h.B0A01ADA3EB55E87.idx  Assimp.cpp.53A72ABACDC57397.idx  AssimpAPITest.cpp.3559173E2D906C02.idx  AssimpAPITest_aiMatrix3x3.cpp.BFE5B6A37C798CD4.idx  AssimpAPITest_aiMatrix4x4.cpp.2DF14C2878737674.idx  AssimpAPITest_aiQuaternion.cpp.046CCDF127FE0943.idx  AssimpAPITest_aiVector2D.cpp.1FADC46B0C356370.idx  AssimpAPITest_aiVector3D.cpp.A49F34F0EFC36034.idx  AssimpCExport.cpp.A0E8B5E011C0242F.idx  AssxmlExporter.cpp.BE1D75B175105CC1.idx  (+979 more)
lib/glad/: CMakeLists.txt  Makefile  cmake_install.cmake
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/glfw-3.4/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
lib/glfw-3.4/src/: Makefile  cmake_install.cmake
lib/stb_image/: CMakeLists.txt  Makefile  cmake_install.cmake
resources/Egg/: egg.mtl  some.mtl
resources/Floor/: Floor.blend  Floor.blend1  Floor.mtl
resources/piller/: Piller.fbx  Piller.mtl
resources/piller/PaintedMetal004_4K-JPG/: PaintedMetal004_4K-JPG.usda
resources/sofa/source/: ready.mtl
resources/test/: test.mtl  untitled.fbx
savedata/: scene.json  scene1.json
shaders/: color.frag  color.vert  debug.frag  light.frag
src/: main.cpp
src/Engine/Physics/: ContactListener.h
src/Engine/Renderer/: Window.h  mesh.cpp  mesh.h  model.cpp  model.h  shader.cpp  shader.h
src/Objects/: GRigidBody.h  GameObjects.h  Player.h
src/components/: Camera.h  MeshRenderer.h  Name.h  RigidBody.h  Tag.h  Transform.h
src/engine/core/: Engine.cpp  Engine.h  PhysicsSystem.h  RenderSystem.h  World.cpp  World.h
src/engine/editor/: EditorLayer.cpp  EditorLayer.h
src/engine/renderer/: Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h
